css/style.css
body {
  font-family: Poppins, serif;
  font-size: 20px;
  margin: 10px;
  padding: 10px;
}

#main-header {
  border-bottom: 5px solid white;
  letter-spacing: 3 px;
}

h1 {
  font-size: 75px;
  font-weight: 300;
}

header {
  background-color: rgb(142, 182, 247);
  color: rgb(8, 0, 0);
  font-weight: 300;
  padding: 50px;
  text-align: center;
}

.highlight-italics {
  color: rgb(48, 46, 46);
  font-weight: bold;
  font-style: oblique;
}

nav {
  background-color: #2b52df;
  padding: 20px;
  text-align: center;
}

nav a {
  margin: 20px;
  text-decoration: underline;
  color: rgb(255, 255, 255);
}

main {
  padding: 20px;
}

aside {
  background-color: rgb(255, 166, 134);
  border: 3px solid rgb(20, 41, 200);
  padding: 20px;
  margin: 20px;
  color: rgb(3, 3, 3);
}

footer {
  background-color: #2b52df;
  color: white;
  text-align: center;
  padding: 10px;
}

